# factory_pattern_cpp

./: .clang-format  CMakeLists.txt  changelog.md  conanfile.txt  main_optimised.cpp  main_optimised_di.cpp  readme.md
.github/workflows/: cmake.yml
include/: audio_exporter_abstract.h  audio_exporters.h  exporter_factory.h  fast_exporter.h  high_quality_exporter.h  master_quality_exporter.h  video_exporter_abstract.h  video_exporters.h
src/: main_non_optimised.cpp  main_optimised.cpp  main_optimised_di.cpp
